--- a/history.html
+++ b/history.html
@@ -46,7 +46,7 @@
                 </figure>
                 <figure class="figure-right">
                    <img class="figure-image" src="images/nypl.digitalcollections.510d47dd-e4b5-a3d9-e040-e00a18064a99.001.w.jpg">
-                    <figcaption>The first public hearing occurred in September, 1965 over the future of the Astor Library on Lafayette Street in Manhattan. The building was granted landmark status the following month.
+                    <figcaption>The first public hearing occurred in September 1965 over the future of the Astor Library on Lafayette Street in Manhattan. The building was granted landmark status the following month.
                     </figcaption>
                 </figure>
                 <p class="photocredit"> Photo credits: Aerial view of New York City at top of page <a href="http://www.loc.gov/pictures/resource/highsm.17056/" target="_blank">(LC-DIG-highsm-17056)</a> from the Library of Congress, Prints & Photographs Division, photograph by Carol M. Highsmith. Pennsylvania Station <a href="http://www.loc.gov/pictures/resource/hhh.ny0411.photos.119994p/" target="_blank">(HABS NY,31-NEYO,78-6)</a> from the Library of Congress, Prints & Photographs Division, photograph by Cervin Robinson. Grand Central Terminal by Metropolitan Transportation Authority of the State of New York, <a href="http://creativecommons.org/licenses/by/2.0" target="_blank">[CC BY 2.0]</a> via<a href="https://commons.wikimedia.org/wiki/File%3ABlizzard_of_2015-_Empty_Grand_Central_Terminal_(16377099101).jpg" target="_blank"> Wikimedia Commons</a>. Astor Library from <a href="https://digitalcollections.nypl.org/items/510d47dd-e4b5-a3d9-e040-e00a18064a99" target="_blank">The New York Public Library</a>. 
