--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
                 </p>
                 <figure class="figure-left">
                    <img class= "figure-image" src="images/pexels-photo-160098.jpeg">
-                    <figcaption>The Cyclone roller coaster ride in Coney Island, Brooklyn <br>was granted landmark status in 1988.
+                    <figcaption>The Cyclone roller coaster ride in Coney Island, Brooklyn, <br>was granted landmark status in 1988.
                     </figcaption>
                 </figure>
                 <figure class="figure-right">
                    <img class="figure-image" src="images/955px-Magnolia_Tree_Center_Bk_jeh-cropped.jpg">
-                    <figcaption>The Magnolia Grandiflora tree in Bed Stuy, Brooklyn was granted landmark status in 1970.
+                    <figcaption>The Magnolia Grandiflora tree in Bed Stuy, Brooklyn, was granted landmark status in 1970.
                     </figcaption>
                 </figure>
                 <p class="photocredit"> Photo credits: Aerial view of New York City at top of page <a href="http://www.loc.gov/pictures/resource/highsm.17056/" target="_blank">(LC-DIG-highsm-17056)</a> and close-up view of the Statue of Liberty <br><a href="http://www.loc.gov/pictures/resource/highsm.15918/" target="_blank">(LC-DIG-highsm-15918)</a> both from the Library of Congress, Prints & Photographs Division, photographs by Carol M. Highsmith. 
