--- a/interior.html
+++ b/interior.html
@@ -30,12 +30,12 @@
             <section>
                 <figure class="figure-right">
                     <img class="figure-image" src="images/768px-Empire_State_Building_NYC_3.jpg">
-                    <figcaption> In the main lobby is an aluminum image of the Empire State Building, with the rising sun behind it, superimposed on a map of N.Y. State. 
+                    <figcaption> The main lobby of the Empire State Building <br>is dominated by an aluminum image of the <br>skyscraper superimposed on a map of N.Y. State. 
                     </figcaption>
                 </figure>
                 <h2 class="headline-text-left"> The very first interior landmark named is the main branch <br>of the New York Public Library on Fifth Ave at 42nd Street. The interior of this great building is as magnificent as its exterior. 
                 </h2>
-                <p class="body-text-left"> Interior landmarks are buildings that are customarily open or accessible to the public or <br>to which the public is customarily invited, such as <br>a theater, a courthouse, or office building. They <br>must also meet the criteria for individual landmarks. Many landmarks are both individual and interior landmarks. The more famous examples include the Chrysler Building, the Empire State Building, and Grand Central Terminal.
+                <p class="body-text-left"> Interior landmarks are buildings that are customarily open or accessible to the public or <br>to which the public is customarily invited, such as <br>a theater, a courthouse, or office building. They <br>must also meet the criteria for individual landmarks. Many landmarks are both individual and interior landmarks. The more famous examples include the Chrysler Building and the Empire State Building.
                 </p>
                 <p class="fun-fact"> <span id="span-bold">FUN FACT:</span> There are 12 subway stations that were designated <br>as interior landmarks in 1979. To watch a video on the City Hall station, which is no longer in use, go to <a href= "https://www.youtube.com/watch?v=CVzSOnHQ16o" target ="_blank">youtube.com</a>.
                 </p>
